Fix to include correct header files in jumplist.{h, cc}

This CL fixes jumplist.{h, cc} to include some necessary header files
according to the iwyu (include-what-you-use) rule, and to remove some
others which are redundant.

BUG=719752

Review-Url: https://codereview.chromium.org/2861393002
Cr-Commit-Position: refs/heads/master@{#470659}